[build-system]
requires = ["setuptools >= 74.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aiolrr"
version = "0.0.1"
authors = [
    {name="psilabs-dev"}
]
description = "An asynchronous LANraragi client written in Python."
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.10, <3.13"
dynamic = [
    "dependencies"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "tox>=4.23.0",
    "ruff"
]

[project.urls]
Homepage = "https://github.com/psilabs-dev/aiolrr"

[tool.ruff]
extend-select = ["ASYNC", "C4", "SIM"]
ignore = ["ASYNC230"] # use normal blocking open, aiofiles may be too slow.
show-fixes = true
target-version = "py310"

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

# [tool.setuptools]
# include-package-data = true

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }